; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_set_bank_MEGA_4096.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_set_bank_MEGA_4096.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@active_cart = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @set_bank_MEGA_4096 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_bank_MEGA_4096() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @active_cart, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 8
  %4 = icmp eq i32 %3, 255
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 (...) @MEMORY_Cart809fDisable()
  %7 = call i32 (...) @MEMORY_CartA0bfDisable()
  br label %21

8:                                                ; preds = %0
  %9 = call i32 (...) @MEMORY_Cart809fEnable()
  %10 = call i32 (...) @MEMORY_CartA0bfEnable()
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @active_cart, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @active_cart, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = mul nsw i32 %16, 16384
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %13, %18
  %20 = call i32 @MEMORY_CopyROM(i32 32768, i32 49151, i64 %19)
  br label %21

21:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @MEMORY_Cart809fDisable(...) #1

declare dso_local i32 @MEMORY_CartA0bfDisable(...) #1

declare dso_local i32 @MEMORY_Cart809fEnable(...) #1

declare dso_local i32 @MEMORY_CartA0bfEnable(...) #1

declare dso_local i32 @MEMORY_CopyROM(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
